--- a/package.json
+++ b/package.json
@@ -3,26 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://tiemtrabaco.com",
+  "packageManager": "pnpm@10.8.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "next": "15.3.0-canary.39",
-    "react": "19.2.0-canary-6a7650c7-20250405",
-    "react-dom": "19.2.0-canary-6a7650c7-20250405"
+    "clsx": "^2.1.1",
+    "next": "15.3.1-canary.7",
+    "react": "19.2.0-canary-1d6c8168-20250411",
+    "react-dom": "19.2.0-canary-1d6c8168-20250411",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.0-canary.39",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "15.3.1-canary.7",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.3",
+    "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": "22",
+    "pnpm": "10"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "bracketSpacing": false,
+    "arrowParens": "avoid",
+    "endOfLine": "auto"
   }
 }
