--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.4.0-canary.2",
     "react": "19.2.0-canary-bc6184dd-20250417",
     "react-dom": "19.2.0-canary-bc6184dd-20250417",
+    "react-photo-view": "^1.2.7",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
