--- a/package.json
+++ b/package.json
@@ -3,40 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://tiemtrabaco.com",
-  "packageManager": "pnpm@10.10.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "preinstall": "npx only-allow pnpm"
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "next": "15.4.0-canary.2",
-    "react": "19.2.0-canary-bc6184dd-20250417",
-    "react-dom": "19.2.0-canary-bc6184dd-20250417",
-    "react-photo-view": "^1.2.7",
-    "tailwind-merge": "^3.2.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-photo-view": "^1.2.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.6",
-    "@types/node": "^22.15.17",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "eslint": "^9.26.0",
-    "eslint-config-next": "15.4.0-canary.2",
+    "eslint-config-next": "latest",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.6",
-    "typescript": "^5.8.3"
-  },
-  "engines": {
-    "node": "22",
-    "pnpm": "10"
+    "typescript": "^5.8.3",
+    "@types/bun": "latest"
   },
   "prettier": {
     "singleQuote": true,
