--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
     "react-photo-view": "^1.2.7"
   },
   "devDependencies": {
+    "@egoist/tailwindcss-icons": "^1.9.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.6",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "eslint": "^9.26.0",
+    "@iconify-json/hugeicons": "^1.2.5",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@types/bun": "latest",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "eslint": "^9.27.0",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.6",
-    "typescript": "^5.8.3",
-    "@types/bun": "latest"
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5.8.3"
   },
   "prettier": {
     "singleQuote": true,
