--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tiemtrabaco.com",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "homepage": "https://tiemtrabaco.com",
   "scripts": {
     "dev": "next dev --turbopack",
@@ -19,18 +20,19 @@
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.9.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@iconify-json/hugeicons": "^1.2.5",
-    "@tailwindcss/postcss": "^4.1.7",
+    "@iconify-json/hugeicons": "^1.2.17",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/bun": "latest",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5",
-    "eslint": "^9.27.0",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "eslint": "^9.37.0",
     "eslint-config-next": "latest",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.7",
-    "typescript": "^5.8.3"
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.6.2",
+    "tailwind-scrollbar-hide": "^4.0.0",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3"
   },
   "prettier": {
     "singleQuote": true,
