--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "type": "module",
   "homepage": "https://tiemtrabaco.com",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint": "eslint"
   },
   "dependencies": {
     "next": "latest",
@@ -19,25 +18,20 @@
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.9.0",
-    "@eslint/eslintrc": "^3.3.1",
-    "@iconify-json/hugeicons": "^1.2.17",
-    "@tailwindcss/postcss": "^4.1.14",
+    "@iconify-json/hugeicons": "^1.2.20",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/bun": "latest",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "eslint": "^9.37.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "eslint": "^9.39.2",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "tailwind-scrollbar-hide": "^4.0.0",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
-  "prettier": {
-    "singleQuote": true,
-    "bracketSpacing": false,
-    "arrowParens": "avoid",
-    "endOfLine": "auto"
-  }
+  "prettier": {}
 }
